padding and margins fixed

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <header class="max-length text-center pad-t push-2 gutter-quarter">
+  <header class="max-length text-center pad-t push-2 gutter-half">
     <h1 class="giga not-bold text-upper push-0">Queen of the Black Coast</h1>
     <h2 class="micro italic">By Robert E. Howard, 1934</h2>
     <hr>
   </header>
 
-  <article class="max-length gutter-quarter">
+  <article class="max-length gutter-half">
     <h3 class="mega bold">1. Conan Joins the Pirates</h3>
 
-    <blockquote class=" italic">
-      <p>Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.</p>
+    <blockquote class="italic pad-t pad-b">
+      <p class="push-0">Believe green buds awaken in the spring,<br>That autumn paints the leaves with somber fire;<br>Believe I held my heart inviolate<br>To lavish on one man my hot desire.</p>
       <footer>
         <cite class="not-italic">— The Song of Bélit</cite>
       </footer>
